Improved web site.
* Improved label for download link.
* Added ant target to publish web site.

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 </head>
 <body
  style="color: rgb(204, 204, 204); background-color: rgb(17, 17, 17);"
- alink="#9999ff" link="#ccccff" vlink="#cccccc">
+ link="#ccccff" vlink="#cccccc" alink="#9999ff">
 <h1 style="font-family: monospace;">ASCII-Scramble</h1>
 <p style="font-family: monospace;"><img style="font-family: monospace;"
  src="screenshot.png" alt="Screenshot of ASCII-Scramble in action"
@@ -21,7 +21,7 @@ characters. It also works with Windows provided you know <a
  href="http://www.computerhope.com/issues/chdos.htm">how to get an MS
 DOS prompt or command line</a>.</p>
 <p style="font-family: monospace; font-weight: bold;"><a
- href="ASCSCRAM.ZIP">Download</a></p>
+ href="ASCSCRAM.ZIP">Download ASCSCRAM.ZIP</a></p>
 <p style="font-family: monospace;">Main features are:</p>
 <ul style="font-family: monospace;">
   <li>needs only 7 bit ASCII characters and 3 different colors to
