Cleaned up documentation and comments.
* Added license comment.
* Added link to DOSBox, which enables to run ASCII-Scramble in platforms other than DOS and Windows.
* Cleaned up typos.

--- a/site/index.html
+++ b/site/index.html
@@ -11,11 +11,11 @@
 </head>
 <body
  style="color: rgb(204, 204, 204); background-color: rgb(17, 17, 17);"
- link="#ccccff" vlink="#cccccc" alink="#9999ff">
+ alink="#9999ff" vlink="#cccccc" link="#ccccff">
 <h1 style="font-family: monospace;">ASCII-Scramble</h1>
 <p style="font-family: monospace;"><img style="font-family: monospace;"
  src="screenshot.png" alt="Screenshot of ASCII-Scramble in action"
- align="right">ASCII-Scramble is a shot'em up for
+ align="right">ASCII-Scramble is a shoot'em up for
 MS DOS text mode using only ASCII
 characters. It also works with Windows provided you know <a
  href="http://www.computerhope.com/issues/chdos.htm">how to get an MS
