Added link to license.

--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,9 @@
 MS DOS text mode using only ASCII
 characters. It also works with Windows provided you know <a
  href="http://www.computerhope.com/issues/chdos.htm">how to get an MS
-DOS prompt or command line</a>.</p>
+DOS prompt or command line</a>. For other platforms, you can use <a
+ href="http://www.dosbox.com/">DOSBox</a>.<br>
+</p>
 <p style="font-family: monospace; font-weight: bold;"><a
  href="ASCSCRAM.ZIP">Download ASCSCRAM.ZIP</a></p>
 <p style="font-family: monospace;">Main features are:</p>
@@ -35,7 +37,7 @@ render epic space battles<br>
 <p style="font-family: monospace;">For installation, controls and more
 information, read the <a href="README.TXT">README.TXT</a>.</p>
 <p style="font-family: monospace;">ASCII-Scramble is distributed under
-the BSD license. To obtain the
+the <a href="LICENSE.TXT">BSD license</a>. To obtain the
 source code, visit &lt;<a
  href="https://github.com/roskakori/ASCII-Scramble">https://github.com/roskakori/ASCII-Scramble</a>&gt;.
 Use
